Fix webpack config

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,6 @@ h2 {
   padding: 5px 10px;
   margin-left: auto;
   align-self: center;
-  height: fit-content;
 }
 
 table {
@@ -32,13 +31,13 @@ table {
 
 td,
 th {
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #ddd;
 }
 
 .add-score-container {
